--- a/model.tex
+++ b/model.tex
@@ -22,6 +22,8 @@
 \newcommand{\argmin}{\operatorname*{argmin}}
 \newcommand{\argmax}{\operatorname*{argmax}}
 \newcommand{\cS}{{\cal S}}
+\newcommand{\logdet}{\log\left(\left|\Sigma_D\right| \left| \Sigma_O
+    \right| \right)}
 
 \title{Model Based Motion Detection}
 \author{Andy Fraser}
@@ -33,15 +35,16 @@
 \label{sec:introduction}
 
 Frame by frame detection/tagging could use the result of a
-\emph{filtered} forecast\footnote{$P(S(t)|y_1^{t-1})$ is the entire a
-  posteriori distribution.}, ie,
+\emph{filtered} forecast\footnote{$P(S(t)|\ts{y}{\tau}{1}{t-1})$ is
+  the entire a posteriori distribution.}, ie,
 \begin{equation*}
-  P(S(t)|y_1^{t-1}).
+  P(S(t)|\ts{y}{\tau}{1}{t-1}).
 \end{equation*}
 Note that the maximum a posteriori (MAP) or \emph{decoded} track ie,
 \begin{align*}
-  \hat s_1^T &\equiv \argmax_{s_1^T} P(s_1^T|y_1^{t-1}) \\
-            &=  \argmax_{s_1^T} P(s_1^T,y_1^{t-1})
+  \hat s_1^T &\equiv \argmax_{\ts{s}{\tau}{1}{T}}
+  P(\ts{s}{\tau}{1}{T}|\ts{y}{\tau}{1}{T}) \\
+  &= \argmax_{\ts{s}{\tau}{1}{T}} P(\ts{s}{\tau}{1}{T},\ts{y}{\tau}{1}{T})
 \end{align*}
 is different than the sequence of filtered forecasts.
 
@@ -54,7 +57,8 @@ With the definitions
   \alpha_t &\equiv P(\ti{s}{t}|\ts{y}{\tau}{1}{t}) \text{ The updated distribution} \\
   f_t &\equiv P(\ti{s}{t}|\ts{y}{\tau}{1}{t-1}) \text{ The forecast
     distribution} \\
-  \gamma_t &= P(\ts{y}{\tau}{1}{t}) \text{ The incremental likelihood}
+  \gamma_t &\equiv P(\ti{y}{t}|\ts{y}{\tau}{1}{t-1}) \text{ The
+    incremental likelihood}
 \end{align}
 and applying a model characterized by the distributions
 \begin{align}
@@ -92,7 +96,7 @@ I can evaluate the functions $B(*,t)$ and $\nu(*,t)$ recursively as
 follows:
 \begin{align*}
   u'(s,s',t) &= \nu(s,t) + \log\left( P_{\ti{s}{t+1}|}(s'|s) \right) +
-  \log\left( P_{\ti{y}{t+1}|\ti{s}{t+1}}(\ti{y}{t=1}|s') \right) \\
+  \log\left( P_{\ti{y}{t+1}|\ti{s}{t+1}}(\ti{y}{t+1}|s') \right) \\
   B(s,t) &= \argmax_{s'} u'(s',s,t)) \\
   \nu(s,t+1) &= u'(B(s,t),s,t)
 \end{align*}
@@ -310,7 +314,7 @@ I can write the following recursion:
   \nu(s,t) &= -\frac{1}{2}(s-\mu_{t})^T
     \Sigma_{t}^{-1}(s-\mu_{t}) + R_t \nonumber \\
   \label{eq:decode_u'}
-  u'(s,s',t) &= \nu(s,t)  - 
+  u'(s,s',t) &= \nu(s,t) -\frac{1}{2} \logdet  - 
   \frac{1}{2}(s'-As)^T \Sigma_{D}^{-1} (s'-As)  \nonumber \\
   &\quad - \frac{1}{2}(\ti{y}{t+1} - O s')^T \Sigma_{O}^{-1}(\ti{y}{t+1}
     - O s') \\
@@ -319,16 +323,21 @@ I can write the following recursion:
   &= \left( \Sigma_t^{-1} + A^T \Sigma_D^{-1} A \right)^{-1} \left(
     \Sigma_t^{-1} \mu_t + A^T \Sigma_D^{-1} s \right) \\
   \nu(s,t+1) &= u'(B(s,t),s,t) \nonumber \\
-  &=  -\frac{1}{2}(s-\mu_{t+1})^T
+  &\equiv  -\frac{1}{2}(s-\mu_{t+1})^T
   \Sigma_{t+1}^{-1}(s-\mu_{t+1}) + R_{t+1} \nonumber \\
   \label{eq:new_Sigma}
-  \Sigma_{t+1}^{-1} & = O^T\Sigma_O O + \left( \Sigma_D + A \Sigma_t
+  \Sigma_{t+1}^{-1} & = O^T\Sigma_O^{-1} O + \left( \Sigma_D + A \Sigma_t
     A^T \right)^{-1} \\
   \label{eq:new_mu}
-  \mu_{t+1} &= A \mu_t + \Sigma_{t+1} O^T \Sigma_O^{-1} (\ti{y}{t+1} - OA \mu_t)
+  \mu_{t+1} &= A \mu_t + \Sigma_{t+1} O^T \Sigma_O^{-1} (\ti{y}{t+1} -
+  OA \mu_t) \\
+  R_{t+1} &= R_t -\frac{1}{2} ( \mu_t^T A^T (A\Sigma_t A^T +
+  \Sigma_D)^{-1} A \mu_t  + y^T \Sigma_Oy \nonumber \\
+  \label{eq:new_R}
+  & \quad \quad \quad \quad - \mu^T_{t+1} \Sigma_{t+1}^{-1} \mu_{t+1} + \logdet )
 \end{align}
-I derive \eqref{eq:decode_B} by solving\footnote{The derivation of
-  \eqref{eq:decode_B}:
+I derive \eqref{eq:decode_B} by
+solving\footnote{The derivation of \eqref{eq:decode_B}:
   \begin{align*}
     \frac{d u'(q,s,t)}{d q} &= -\Sigma_t^{-1}(q-\mu_t) + A^T \Sigma_D^{-1}
     (s - Aq) \\
@@ -372,17 +381,25 @@ with $B$, using the notation
 \end{align*}
 I find
 \begin{align*}
-  \nu(s,t+1) &=  -\frac{1}{2}(B-\mu_{t})^T \Sigma_{t}^{-1}
+  \nu(s,t+1) &= -\frac{1}{2}(B-\mu_{t})^T \Sigma_{t}^{-1}
   (B-\mu_{t}) + R_t\\
   &\quad - \frac{1}{2} (s-AB)^T \Sigma_{D}^{-1} (s-AB)\\
   &\quad - \frac{1}{2}(\ti{y}{t+1}-O s)^T \Sigma_{O}^{-1}
-  (\ti{y}{t+1}-Os) \\
+  (\ti{y}{t+1}-Os) -\frac{1}{2} \logdet\\
   -2 \nu(s,t+1) &= (G-\mu_{t}+Fs)^T \Sigma_{t}^{-1} (G-\mu_{t}+Fs) \\
   &\quad + ((1-AF)s-AG)^T \Sigma_{D}^{-1} ((1-AF)s-AG)\\
   &\quad + (\ti{y}{t+1}-O s)^T \Sigma_{O}^{-1} (\ti{y}{t+1}-Os) -2R_t \\
-  &= s^T q s - 2s^T l + c
+  &\equiv s^T q s - 2s^T l + c.
 \end{align*}
-where the constant term $c$ is irrelevant.  The quadratic term is
+To express $\nu_{t+1}$ in terms of $\Sigma_{t+1}$, $\mu_{t+1}$, and
+$R_{t+1}$, I will use the following formulas:
+\begin{align*}
+  \Sigma_{t+1}^{-1} &= q \\
+  \mu_{t+1} &= \Sigma_{t+1} l \\
+  R_{t+1} &= -\frac{1}{2} \left( c - \mu_{t+1}^T \Sigma_{t+1}^{-1}
+    \mu_{t+1} \right) .
+\end{align*}
+The quadratic term is
 \begin{align*}
   q &= F^T\Sigma_t^{-1}F + (1-AF)^T\Sigma_D^{1-}(1-AF) +
   O^T\Sigma_O^{-1}O \\
@@ -427,6 +444,30 @@ Now the verification is simply:
     by the lemma}\\
   &= l.
 \end{align*}
+
+Using the the following abbreviation and calculation
+\begin{align*}
+  H &\equiv (\Sigma_t^{-1} + A^T \Sigma_D^{-1}A)^{-1} \Sigma_t^{-1} \\
+  &= 1 - \Sigma_t A^T(A\Sigma_t A^T + \Sigma_D)^{-1} A \quad \text{ By
+    matrix inversion lemma}
+\end{align*}
+I write the constant term as
+\begin{align*}
+  c &= \mu_t^T \left( (H-1)^T\Sigma_t^{-1} (H-1) + H^TA^T\Sigma_D^{-1}
+    AH \right) \mu_t + \ti{y^T}{t+1} \Sigma_O^{-1}
+  \ti{y}{t+1} - 2R_t + \logdet\\
+  &= \mu_t^T  A^T(A\Sigma_t A^T + \Sigma_D)^{-1}A \mu_t
+  + \ti{y^T}{t+1} \Sigma_O^{-1} \ti{y}{t+1} - 2R_t  + \logdet,
+\end{align*}
+and find
+\begin{equation*}
+  R_{t+1} = R_t -\frac{1}{2} \mu_t^T  A^T(A\Sigma_t A^T +
+  \Sigma_D)^{-1}A \mu_t -\frac{1}{2}\ti{y^T}{t+1} \Sigma_O^{-1}
+  \ti{y}{t+1} + \frac{1}{2}  \mu_{t+1}^T \Sigma_{t+1}^{-1}
+  \mu_{t+1} -\frac{1}{2} \logdet
+\end{equation*}
+
+
 
 \newpage
 \hrule
